test/invalid-syntax/fc66494_wrong_string/wrong_string.mag
-- Author: 66494, Tiago Silva

const x : String = "str'

fun main (_) : Unit -> Unit =
    print(x)